--- a/src/pages/Commands.css
+++ b/src/pages/Commands.css
@@ -19,6 +19,10 @@
     margin-left: 20px
 }
 
+.commands-content{
+    width: 65%;
+}
+
 
 @media (max-width: 600px){
     .command-name{
@@ -42,6 +46,10 @@
     .commands-content ul{
         margin-top: 5px;
         margin-left: 10px
+    }
+
+    .commands-content{
+        width: 90%;
     }
     
 }
